# solid

./: README.md  pyproject.toml
solid/: __init__.py
src/solid/: __init__.py
test/: test_simple_store.py
